examples/apps/sample-app/kustomize/overlays/cloud-prod/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
spec:
  replicas: 2
