examples/apps/sample-app/kustomize/overlays/cloud-prod/delete-gateway.yaml
$patch: delete
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sample-app
