examples/apps/sample-app/kustomize/overlays/cloud-prod/delete-httproute.yaml
$patch: delete
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-app
